Bug 667885 - about:support causes screen freeze. r=chrislord